<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onBackgroundTap"
    tools:context="dwightvdv.simplecounter.CounterActivity">

    <Button
        android:id="@+id/btnCount"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="203dp"
        android:layout_height="123dp"
        android:layout_gravity="end"
        android:onClick="onButtonIncreaseTap"
        android:text="@string/cntrCurrent"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.706" />

    <TextView
        android:id="@+id/goaltext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:text="@string/goalTitle"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/etGoal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etGoal"
        style="@android:style/Widget.Holo.Light.EditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:inputType="number"
        android:singleLine="true"
        android:text="@string/cntrGoal"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/goaltext"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/BtnRevert"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/descrRevert"
        android:onClick="onButtonRevertTap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCount"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <ImageButton
        android:id="@+id/btnReset"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/decrClear"
        android:onClick="onButtonResetTap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/btnCount"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <EditText
        android:id="@+id/etTitle"
        style="@android:style/Widget.Holo.Light.EditText"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:text="@string/cntrTitle"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etGoal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/hideFocus"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textSize="30sp"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="479dp" />

</android.support.constraint.ConstraintLayout>
